added auth
added env variables
