# src/routes/index.ts
@@ -4,6 +4,7 @@ const router = require('express').Router();
 router.use('/user',require('./user'));
 router.use('/stock',require('./stock'));
 router.use('/order',require('./order'));
+router.use('/supplier',require('./supplier'))
 
 
 module.exports = router;
